# pre-commit-hooks

./: .gitignore  .pre-commit-hooks.yaml  LICENSE  MANIFEST.in  README.md  setup.cfg  setup.py
pre_commit_hooks/: docker-lint  doxygen_check_syntax.py  generic_check_case_conflict.py  generic_check_executables_have_shebangs.py  generic_check_shebang_scripts_are_executable.py  generic_check_symlinks.py  generic_detect_private_key.py  generic_end_of_file_fixer.py  generic_fix_byte_order_marker.py  generic_mixed_line_ending.py  generic_trailing_whitespace_fixer.py  git-check-mailmap  git-forbid-binary  git_check_added_large_files.py  git_check_merge_conflict.py  git_commit_msg.py  python_check_ast.py  python_check_builtin_literals.py  python_debug_statement_hook.py  python_double_quote_string_fixer.py  python_name_tests_test.py  python_pylint_config.py  python_requirements_txt_fixer.py  shell-script-must-have-extension  shell-script-must-not-have-extension  toml_check_syntax.py  toml_pretty_format.py  util.py  utils.py  xml_check_syntax.py  yaml_check_syntax.py  yaml_pretty_format.py
pre_commit_hooks.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
pre_commit_hooks/data/: .relint.yml
