[metadata]
name = pre_commit_hooks
version = 0.0.1
description = Some personal hooks for pre-commit.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ra2f/pre-commit-hooks
author = ra2f
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
install_requires =
    ruamel.yaml>=0.15
    toml
python_requires = >=3.7

[options.entry_points]
console_scripts =
    git-check-mailmap = pre_commit_hooks.git_check_mailmap:main
    git-check-added-large-files = pre_commit_hooks.git_check_added_large_files:main
    git-check-merge-conflict = pre_commit_hooks.git_check_merge_conflict:main
    git-commit-msg = pre_commit_hooks.git_commit_msg:main

    generic-check-byte-order-marker = pre_commit_hooks.generic_check_byte_order_marker:main
    generic-check-case-conflict = pre_commit_hooks.generic_check_case_conflict:main
    generic-check-executables-have-shebangs = pre_commit_hooks.generic_check_executables_have_shebangs:main
    generic-check-symlinks = pre_commit_hooks.generic_check_symlinks:main
    generic-check-vcs-permalinks = pre_commit_hooks.generic_check_vcs_permalinks:main
    generic-detect-private-key = pre_commit_hooks.generic_detect_private_key:main
    generic-end-of-file-fixer = pre_commit_hooks.generic_end_of_file_fixer:main
    generic-trailing-whitespace-fixer = pre_commit_hooks.generic_trailing_whitespace_fixer:main
    generic-crlf-forbid = pre_commit_hooks.generic_crlf_forbid:main
    generic-crlf-remove = pre_commit_hooks.generic_crlf_remove:main
    generic-tabs-forbid = pre_commit_hooks.generic_tabs_forbid:main
    generic-tabs-remove = pre_commit_hooks.generic_tabs_remove:main
    generic-nbsp-forbid = pre_commit_hooks.generic_nbsp_forbid:main
    generic-nbsp-remove = pre_commit_hooks.generic_nbsp_remove:main
    generic-en-dashes-forbid = pre_commit_hooks.generic_en_dashes_forbid:main
    generic-en-dashes-remove = pre_commit_hooks.generic_en_dashes_remove:main

    json-check-syntax = pre_commit_hooks.json_check_syntax:main
    json-check-format = pre_commit_hooks.json_check_format:main
    json-pretty-format = pre_commit_hooks.json_pretty_format:main

    python-check-ast = pre_commit_hooks.python_check_ast:main
    python-check-builtin-literals = pre_commit_hooks.python_check_builtin_literals:main
    python-check-docstring-first = pre_commit_hooks.python_check_docstring_first:main
    python-debug-statement-hook = pre_commit_hooks.python_debug_statement_hook:main
    python-double-quote-string-fixer = pre_commit_hooks.python_double_quote_string_fixer:main
    python-fix-encoding-pragma = pre_commit_hooks.python_fix_encoding_pragma:main
    python-requirements-txt-fixer = pre_commit_hooks.python_requirements_txt_fixer:main
    python-safety-checks = pre_commit_hooks.python_safety_checks:main
    python-isort-config = pre_commit_hooks.python_isort_config:main
    python-pylint-config = pre_commit_hooks.python_pylint_config:main

    toml-check-syntax = pre_commit_hooks.toml_check_syntax:main

    xml-check-syntax = pre_commit_hooks.xml_check_syntax:main

    yaml-check-syntax = pre_commit_hooks.yaml_check_syntax:main

[bdist_wheel]
universal = True
